# PyAlchemyAdmin

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: example.py  example_table.py
innodisk_db_operation/: __init__.py  db_manager.py  postgre_db_manager.py
pyalchemyadmin/: __init__.py  db_manager.py  dialect_db_manager.py
