[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42", 
    "wheel"
]

[project]
name = "pyalchemyadmin"
version = "0.0.1"
license = {file = "LICENSE.txt"}
description = "Database management tool for SQLAlchemy"
authors = [{name = "Elliot Su", email = "sodinfeliz@google.com"}]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Operating System :: OS Independent",
]

[project.urls]
soucre = "https://github.com/sodinfeliz/PyAlchemyAdmin"